--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  
 </head>
 <body>
+<!-- comment for test -->
       <div id="tabs">
         <div class="menu">
           <a href="#" class="titles current">
