--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
 </head>
 <body>
-<!-- comment for test -->
+<!-- comment  -->
       <div id="tabs">
         <div class="menu">
           <a href="#" class="titles current">
