--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <!-- comment for test -->
+<!-- new commit from ather guy -->
       <div id="tabs">
         <div class="menu">
           <a href="#" class="titles current">
