--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <!-- comment for test -->
 <!-- new commit from ather guy -->
+<!-- new commit 1 -->
       <div id="tabs">
         <div class="menu">
           <a href="#" class="titles current">
